cambios en etiqueta label foto

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <br>
                     <br>
                     <label for="Foto" class="label">Foto</label>
-                        <input type="file" name="Foto" id="Foto" class="foto" size="5 Mb" accept="image/png, image/jpg">
+                        <input type="file" name="Foto" class="foto" size="5 Mb" accept="image/png, image/jpg">
                     <br><br>
                     
                     <label for="Descripcion" class="label">Descripcion*</label>
