--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
+
 <body>
     <header>
-        <h1>Sistema Integrado de Gestion</h1>
+        <h1>Sistema Integrado de Gestión</h1>
         <figure>
             <img src="imagenes/usuario.jpg">
             <figcaption>Usuario 1</figcaption>
@@ -42,6 +44,8 @@
         </div>
     </aside>
     
+
+
     <main class="main_web">
         <section>
             <form method="POST">
